Source/WebCore/platform/graphics/gstreamer/eme/CDMThunder.cpp
@@ -432,7 +432,7 @@ static const char* toString(CDMInstanceSession::KeyStatus status)
 
 CDMInstanceSession::KeyStatus CDMInstanceSessionThunder::status(const KeyIDType& keyID) const
 {
-    ThunderKeyStatus status = m_session && !m_sessionID.isEmpty() ? opencdm_session_status(m_session.get(), keyID.data(), keyID.size()) : StatusPending;
+    ThunderKeyStatus status = m_session && !m_sessionID.isEmpty() ? opencdm_session_status(m_session->get(), keyID.data(), keyID.size()) : StatusPending;
 
     switch (status) {
     case Usable:
@@ -461,7 +461,7 @@ void CDMInstanceSessionThunder::keyUpdatedCallback(KeyIDType&& keyID)
 
     auto keyStatus = status(keyID);
     GST_DEBUG("updated with with key status %s", toString(keyStatus));
-    m_doesKeyStoreNeedMerging |= m_keyStore.add(KeyHandle::create(keyStatus, WTFMove(keyID), BoxPtr<OpenCDMSession>()));
+    m_doesKeyStoreNeedMerging |= m_keyStore.add(KeyHandle::create(keyStatus, WTFMove(keyID), BoxPtr<OpenCDMSession>(m_session)));
 }
 
 void CDMInstanceSessionThunder::keysUpdateDoneCallback()
@@ -518,8 +518,8 @@ void CDMInstanceSessionThunder::requestLicense(LicenseType licenseType, const At
         callback(initData.releaseNonNull(), { }, false, Failed);
         return;
     }
-    m_session.reset(session);
-    m_sessionID = String::fromUTF8(opencdm_session_id(m_session.get()));
+    m_session = adoptInBoxPtr(session);
+    m_sessionID = String::fromUTF8(opencdm_session_id(m_session->get()));
 
     auto generateChallenge = [this, callback = WTFMove(callback)]() mutable {
         ASSERT(isMainThread());
@@ -586,7 +586,7 @@ void CDMInstanceSessionThunder::updateLicense(const String& sessionID, LicenseTy
             callback(false, std::nullopt, std::nullopt, std::nullopt, SuccessValue::Failed);
         }
     });
-    if (!m_session || m_sessionID.isEmpty() || opencdm_session_update(m_session.get(), response->data(), response->size()))
+    if (!m_session || m_sessionID.isEmpty() || opencdm_session_update(m_session->get(), response->data(), response->size()))
         sessionFailure();
 }
 
@@ -623,7 +623,7 @@ void CDMInstanceSessionThunder::loadSession(LicenseType, const String& sessionID
             callback(std::nullopt, std::nullopt, std::nullopt, SuccessValue::Failed, sessionLoadFailureFromThunder(response));
         }
     });
-    if (!m_session || m_sessionID.isEmpty() || opencdm_session_load(m_session.get()))
+    if (!m_session || m_sessionID.isEmpty() || opencdm_session_load(m_session->get()))
         sessionFailure();
 }
 
@@ -631,8 +631,15 @@ void CDMInstanceSessionThunder::closeSession(const String& sessionID, CloseSessi
 {
     ASSERT_UNUSED(sessionID, m_sessionID == sessionID);
 
-    if (m_session && !m_sessionID.isEmpty())
-        opencdm_session_close(m_session.get());
+    if (m_session && !m_sessionID.isEmpty()) {
+        opencdm_session_close(m_session->get());
+        m_session = BoxPtr<OpenCDMSession>();
+        auto instance = cdmInstanceThunder();
+        if (instance) {
+            instance->unrefAllKeysFrom(m_keyStore);
+            m_keyStore.unrefAllKeys();
+        }
+    }
 
     callback();
 }
@@ -664,7 +671,7 @@ void CDMInstanceSessionThunder::removeSessionData(const String& sessionID, Licen
             callback(m_keyStore.allKeysAs(MediaKeyStatus::InternalError), std::nullopt, SuccessValue::Failed);
         }
     });
-    if (!m_session || m_sessionID.isEmpty() || opencdm_session_remove(m_session.get()))
+    if (!m_session || m_sessionID.isEmpty() || opencdm_session_remove(m_session->get()))
         sessionFailure();
 }
 
